// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render checked 1`] = `
<body>
  <div>
    <div>
      <svg
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#2F7ABF"
          height="20"
          rx="10"
          width="20"
        />
        <rect
          fill="white"
          height="8.33333"
          rx="4.16667"
          width="8.33333"
          x="5.83331"
          y="5.83325"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`<Radio /> should render unchecked 1`] = `
<body>
  <div>
    <div>
      <svg
        fill="none"
        height="20"
        viewBox="0 0 21 20"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="19"
          rx="9.5"
          width="19"
          x="1.00391"
          y="0.5"
        />
        <rect
          height="19"
          rx="9.5"
          stroke="#6E6E73"
          width="19"
          x="1.00391"
          y="0.5"
        />
      </svg>
    </div>
  </div>
</body>
`;
